--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/jlugoengi/rpn-calculator-cli#readme",
   "bin": {
     "rpn-calculator-cli": "./bin/index.js"
+  },
+  "devDependencies": {
+    "mocha": "^9.1.4"
   }
 }
